third_party/move/move-compiler-v2/tests/checking/visibility-checker/direct_visibility_err.exp

Diagnostics:
error: friend function `0x815::b::f` cannot be called from `0x815::c` (not a friend of `0x815::b`)
  ┌─ tests/checking/visibility-checker/direct_visibility_err.move:2:16
  │
2 │     friend fun f() {}
  │                ^ called from function `0x815::c::f`
  ·
7 │         0x815::b::f();
  │         ------------- called here
